--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,13 @@
- @font-face   {
-	 font-family : "jf flat regular" ;
-	 src : url ( ../fonts/jf-flat-regular.eot);
-    src : url ( ../fonts/jf-flat-regular.eot) format('embedded-opentype'),
-    url ( ../fonts/jf-flat-regular.svg#jf flat regular) format('svg'),
-    url ( ../fonts/jf-flat-regular.woff) format('woff'),
-    url ( ../fonts/jf-flat-regular.ttf) format('truetype');
-	font-wight: bolder;
-	font-style: normal;
- }
+ @font-face {
+	font-family: "JF Flat Regular";
+	src: url(../fonts/JF-Flat-regular.eot);
+    src: url(../fonts/JF-Flat-regular.eot?#iefix) format('embedded-opentype'),
+         url('../fonts/JF-Flat-regular.svg#JF Flat Regular') format('svg'),
+         url(../fonts/JF-Flat-regular.woff) format('woff'),
+         url(../fonts/JF-Flat-regular.ttf) format('truetype');
+	font-weight: bolder;
+	font-style: normal
+}
  body{
 	 font-family:"jf flat regular", 'segoe ui', tahoma, geneva , sans-serif;
 	 font-size:14px;
@@ -23,3 +23,281 @@
 	 padding-top : 15px;
 	 padding-bottom  : 15px;
  }
+ .custom-navbar .container .navbar-brand {
+	 margin-left:30px;
+	 margin-top:4px;
+ }
+ .custom-navbar .container{
+	 padding:0;
+ }
+ 
+ .custom-navbar .container .custom-form-control:focus {
+	 border-color:#c2101e;
+	 box-shadow:0 0 2px 0 #c2101e;
+ }
+ 
+.custom-form-control, .custom-btn{
+	border: 1px solid #EBEBEB;
+	box-shadow:none;
+	border-radius: 2px;
+	font-size:14px;
+	padding:6px 16px 7px 16px;
+	color:#868686;
+}
+
+.custom-btn:hover{
+	background-color:#d4d4d4;
+	border: 1px solid #EBEBEB;
+	color:#b86d07;
+	
+}
+
+.categories .nav-link{
+	border-right:0;
+	border-radius:0px;
+}
+.dropdown-menu{
+	text-align:right!important;
+}
+	
+
+.custom-dropdown-menu .checkbox{
+	display:inline-block;
+	margin:0 5px;
+	
+	
+}
+.custom-dropdown-menu .checkbox label input{
+	margin-left:5px;
+}
+
+.custom-dropdown-menu{
+	border-radius:2px;
+	box-shadow: 0 2px 5px 0 #ebebeb;
+	color:#777;
+}
+
+.custom-navbar .search-btn{
+	background-color:#ff3956;
+	border-color:#ff3956;
+	color:#fff;
+	padding:5px 15px 7px 15px;
+	font-size:14px;
+	font-weight:700;
+	border-radius:0;
+}
+
+.custom-navbar .search-btn:hover,
+.custom-navbar .search-btn:active,
+.custom-navbar .search-btn:focus,
+.custom-navbar .search-btn:active:focus,
+.custom-navbar .search-btn:active:hover{
+background-color:#c2101e;
+border-color:#c2101e;
+color:#ffffff
+}
+
+
+
+
+.custom-navbar .navbar-nav li a.nav-link{
+	color:#555555;
+	font-size:14px;
+	padding:15px;
+	
+	
+}
+
+.custom-navbar .navbar-nav  a.nav-link:hover{
+	color:#000;
+}
+
+.custom-navbar .navbar-nav li.active a.nav-link{
+	color:#ff3956;
+	border-bottom:1px solid #ff3956;
+	font-wight:700;
+}
+
+.custom-navbar .navbar-nav li.active:hover a.nav-link{
+	background-color:#e7e7e7;
+}
+
+.nav-item.dropdown .dropdown-menu{
+	left:auto;
+}
+
+.custom-dropdown-menu li a:hover {
+	background-color:#ffe7ea;
+}
+.custom-navbar a.btn-icon{
+	padding:5px 10px 4px;
+	color:#777;
+	border: 1px solid #ddd;
+	background-color:transparent;
+	border-radius:2px;
+	margin-left:10px;
+	margin-right:15px;
+	font-size:12px;
+	margin-bottom:15px;
+
+}
+
+.custom-navbar .navbar-nav li:last.of.type{
+	margin-top:8px;
+}
+
+/*المنتجات المميزة*/
+
+#carousel-featured{
+	background-color:#f7f8f3;
+	height: 400px;
+	padding-top:25px;
+	
+}
+.carousel-row.col-12
+{padding-right:0px;
+padding-left:0px}
+
+#carousel-featured .carousel-item img{
+	height: 375px;
+	width:100%;
+	margin-left:0px;
+	margin-right:0px;
+}
+
+#carousel-featured .product-details{
+	border:1px solid #dddddb;
+	padding:20px;
+	position:relative;
+	margin-top: 50px;
+	height:200px;
+}
+
+#carousel-featured .product-details h1{
+	font-weight:700;
+	font-size:175%;
+	margin-top:18px;
+}
+	
+
+#carousel-featured .product-details .product-category {
+	border : 1px solid black;
+	padding:10px;
+	position:absolute;
+	top:-10px;
+	right:-10px;
+	background-color:#f7f8f3;
+}
+
+#carousel-featured .product-details  .custom-btn-primary {
+	color:#f8ad47;
+	border-color:#f8ad47;
+	background-color:transparent;
+	padding:9px 25px;
+	margin-top:15px;
+	font-size:18px;
+	border-radius:2px;
+}
+
+.sale {
+	background-color:#53ccd7;
+	color:white;
+	font-weight: blod;
+	position:absolute;
+}
+
+.sale.large{
+	height:60px;
+	width:60px;
+	border-radius:50%;
+	left:-15px;
+	top:-15px;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	transform:rotate(-25deg);
+	font-size:130%;
+	padding:36px;
+	line-height:90%;
+	flex-direction:column;
+}
+	#carousel-featured .product-details .sale.large span{
+		font-size:14px;
+	}
+.myline{
+display:inline-block;
+      width:100%;
+	  
+	  
+}
+.custom-carousel-indicators-primary {
+	top:235px;
+	right:41%;
+}
+
+.custom-carousel-indicators-primary img{
+	height:75px;
+	width:75px;
+	background-color:#fff;
+	border:2px solid #dddddb;
+	margin-right:2px;
+	
+	
+}
+
+
+.custom-carousel-indicators-primary img.active{
+	border-color:orange;
+}
+
+#carousel-featured .carousel-control-prev,
+#carousel-featured .carousel-control-next{
+	color:#868686;
+	font-size:20px;
+}
+
+/*مميزات المتجر*/
+
+#store-features{
+box-shadow:0 0 15px #eef0ea;
+position:relative;
+top: -30px;
+background-image:  url(../images/bg_features.png);
+background-repeat:no-repeat;
+background-color:#fff;
+padding-bottom: 35px;
+padding-top:25px;
+background-size:auto 60%;
+background-position:-10px -20px;
+}
+
+#store-features .features img{
+	height:40px;
+	margin-bottom:10px;
+	font-size:24px;
+}
+
+
+ #store-features .feature+.feature {
+	  border-right :1px  solid  #eef0ea; 
+ }	  
+
+
+h3.custom-heading {
+	font-size:24px;
+	margin-bottom:25px;
+}
+.font-size{
+	Font-size:24px;
+	margin-top:25px;
+	
+}
+
+
+
+
+
+
+
+
+
