--- a/src/css/style.css
+++ b/src/css/style.css
@@ -281,6 +281,10 @@ background-position:-10px -20px;
  #store-features .feature+.feature {
 	  border-right :1px  solid  #eef0ea; 
  }	  
+ 
+ 
+ 
+ 
 
 
 h3.custom-heading {
@@ -292,6 +296,484 @@ h3.custom-heading {
 	margin-top:25px;
 	
 }
+
+.custom-thumbnail{
+	border: 2px solid #eef0ea;
+	padding: 8px;
+	cursor:pointer;
+	margin-bottom:20px;
+}
+
+.custom-thumbnail:hover{
+	border-color:#53ccd7;
+	
+}
+
+
+.custom-thumbnail h4{
+	font-size:18px;
+	padding-top:10px;
+}
+
+.custom-thumbnail .card-body{
+	padding:9px
+}
+
+.custom-thumbnail .price{
+	padding-top:10px;
+}
+.price{
+	color:#53ccd7;
+}
+
+.rating{
+	color:#c2c2c2;
+}
+
+.rating .active{
+	color:gold;
+}
+
+.custom-thumbnail .overlay{
+	position: absolute;
+	background-color: rgba(83,204,215, .5);
+	height: 250px;
+	width:calc(100% - 16px);
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	opacity:0;
+	transition:all .3s ease;
+	
+}
+.overlay:hover{
+	opacity:1;
+}
+
+
+.custom-thumbnail .add-to-cart-btn{
+	background-color:#fff;
+	color:#19becd;
+	font-size:blod;
+}
+
+.custom-thumbnail .add-to-cart-btn:hover,
+.custom-thumbnail .add-to-cart-btn:active,
+.custom-thumbnail .add-to-cart-btn:focus,
+.custom-thumbnail .add-to-cart-btn:active:focus,
+.custom-thumbnail .add-to-cart-btn:active:hover{
+	color:#000;
+}
+
+
+.custom-thumbnail.sale{
+	padding:5px 10px;
+	position:absolute;
+	left:16px;
+	top:14px;
+	
+}
+
+.custom-thumbnail.sale::before{
+	content:"-";
+}
+.custtom-carousel-indicators>li{
+	height:13px;
+	width:13px;
+	margin:2px;
+	background-color:#dbdbdb;
+}
+
+.custtom-carousel-indicators>li.active{
+	background-color:#565656;
+}
+
+.carousel-most-sold .carousel-indicators{
+	position:static;
+}
+.custom-thumbnail img{
+	height:250px;
+	width:100%;
+	max-width:250px;
+	margin:0 auto;
+	display:block;
+	
+}
+
+/*الماركات العالمية*/
+.custom-panel{
+	border:4px solid #eef0ea;
+	border-radius:2px;
+	box-shadow:none;
+	padding:20px;
+}
+
+.custom-panel .product-image{
+	width:100%;
+	margin-top:8px;
+}
+
+.custom-btn-primary{
+	color: #f8ad47;
+	border-color:#f8ad47;
+	background-color:transparent;
+	margin-top:5px;
+}
+
+.custom-btn-primary:hover,
+.custom-btn-primary:active,
+.custom-btn-primary:focus,
+.custom-btn-primary:active:focus,
+.custom-btn-primary:active:hover{
+	color:#b86d07;
+	border-color:#b86d07;
+	background-color:transparent;
+}
+
+
+.custom-panel h4, .custom-panel .price {
+	font-size:130%;
+	margin-top:0;
+	margin-bottom:15px;
+}
+
+.custom-text-muted{
+	color:#A9a9a9a;
+}
+ 
+ .custom-arrow-btn{
+	 background-color:#fff;
+	 color:#868686;
+	 border: 1px solid #ebebeb;
+	 box-shadow:none;
+	 border-radius:2px;
+	 padding:5px 10px;
+	 font-size:12px;
+	 
+ }
+ 
+ .brand-products {
+	 margin-bottom:20px;
+ }
+ 
+ .brand-text{
+	 display:inline-block;
+ }
+ 
+ ..brand-products  .brand-nav {
+	 margin-top: 14px;
+ }
+ 
+ #row-brands h3.custom-heading{
+	 border-top: 10px solid  #eef0ea;
+	 padding-top: 25px;
+ }
+	 
+ 
+/**/
+#brand-logos{
+	background-color: #dbeefa;
+	padding:25px 0;
+	margin-top:10px;
+	color:#555555;
+}
+
+#brand-logos img{
+	margin-left:25px;
+	margin-left:25px;
+	max-height:100px;
+	max-width:100px;
+}
+
+#footer-nav{
+	background-color: #1f1e1e;
+	padding:50px 0 40px;
+	background-image:url(../images/bg_footer_1.png), url(../images/bg_footer_2.png);
+	background-repeat: no-repeat , no-repeat;
+	background-position: 110% 0, -10% -15%
+}
+
+
+
+#footer-nav-links {
+	margin:30px 0;
+}
+
+#footer-nav-links a{
+	color:#555555;
+	margin-left:30px;
+	font-weight:bold;
+	
+}
+
+#footer-nav-links a:hover{
+	text-decoration:none;
+}
+#footer-nav #newsletter {
+	border-top: 1px solid #292929;
+}
+
+
+
+#footer-nav form {
+	max-width:260px;
+	margin:auto;
+}
+
+input[type=email]{
+	direction: rtl;
+	text-align:right;
+}
+
+
+#footer-nav form label{
+	margin:27px 0 16px;
+	font-size:12px;
+	font-weight:bold;
+	color:#555555;
+}
+
+.custom-btn-primary2{
+	color:#000;
+	background-color:#f8ad47;
+	border-color: #f8ad47;
+}
+
+.custom-btn-primary2:hover,
+.custom-btn-primary2:active,
+.custom-btn-primary2:focus,
+.custom-btn-primary2:active:focus,
+.custom-btn-primary2:active:hover{
+	background-color:#b86d07;
+	border-color:#b86d07;
+	color:#000;
+}
+
+#newsletter form input{
+	background-color:#313131;
+	opacity:.6;
+	height: 38px;
+	border:none;
+}
+
+#newsletter form button{
+	border-radius:0px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
+	padding: 6px 12px 5px;
+	font-size:14px;
+	color:inherit;
+}
+
+#footer-copyright-social{
+	background-color:#151515;
+	color:#303030;
+	padding-top:30px;
+	padding-bottom:30px;
+	font-weight:700;
+}
+#footer-copyright-social a{
+	color:#303030;
+	margin-left:5px;
+margin-right:5px;
+}
+	
+	
+	/******************************************************************
+	**************************************************
+	MEDIA QUERY
+	*************************************************
+	**********************************************************************/
+	@media (max-width:1199px){
+		.custom-navbar .navbar-nav li a.nav-link {
+			padding:8px;
+		}
+	}
+	@media (max-width:991px) and (min-width: 768px){
+		.custom-thumbnail img {
+			
+			height:200px;
+		}
+		
+	}
+	
+	@media (max-width:991px){
+		.custom-navbar {
+			padding:15px 20px 30px;
+		}
+		
+		.navbar-header{
+			display: block;
+			width: 100%;
+			margin-bottom: 22px;
+		}
+		
+		.custom-navbar .container{
+			max-width:100%;
+		}
+		.navbar-header .btn-icon{
+			float: left;
+		}
+		
+		.form-inline {
+			width: 100%;
+			border-top:1px solid #eee;
+			border-bottom: 1px solid #eee;
+			padding: 10px 0;
+		}
+		
+		.form-inline .dropdown{
+			display:none;
+		}
+		
+		.form-inline .custom-form-control {
+			width: 90%;
+		}
+		.form-inline .search-btn{
+			width:10%;
+		}
+		.custom-navbar a.btn-icon,
+		.custom-navbar button.btn-icon{
+			color:#777;
+			border:1px solid #ddd;
+			border-radius:2px;
+			padding:5px 10px 4px;
+			background-color:transparent;
+			font-size:18px
+		}
+		
+		.custom-navbar .navbar-nav li a.nav-link {
+			padding:10px 16px ; 
+		}
+		
+		.navbar-collapse {
+			border-top: 1px solid #eee ;
+			margin-top: 15px ;
+			padding-top: 8px ;
+		}
+		
+		#carousel-featured .carousel-indicators {
+			margin-right:1%;
+		}
+		.overlay{
+			display:none;
+		}
+		
+		.custom-thumbnail .add-to-cart-btn{
+			background-color: #fff;
+			color:#868686;
+			font-weight:normal;
+		}
+		#copyright , #social-icons
+		{
+			width:100%;
+			text-align:center;
+		}
+		
+		#social-icons
+		{
+			font-size:15px;
+			margin-top:10px;
+		}
+		
+		
+		
+		
+	}
+	
+	@media (max-width:767px){
+		#carousel-featured , #carousel-featured .product-details{
+			height:auto;
+		}
+		#carousel-featured .product-details {
+			position:static;
+			text-align:center;
+		}
+		#carousel-featured{
+			padding-bottom: 25px;
+		}
+		#carousel-featured .carousel-item img {
+			height:250px;
+		}
+		#brand-logos img {
+			max-height: 50px;
+			max-width:50px;
+			margin:5px 24px 5px 23px ;
+		}
+		#footer-nav  .footer-logo {
+			margin-bottom: 30px;
+		}
+		#footer-nav form {
+			max-width: 100%;
+			width:100%;
+		}
+		#newsletter form .input-group {
+			width:100%;
+		}
+		
+		
+	}
+	
+	@media (max-width:575px) {
+		
+	.form-inline .custom-form-control {
+			width: 80%;
+		}
+		.form-inline .search-btn{
+			width:20%;
+		}
+		#footer #brand-logos .img-container img {
+			margin:5px 15px ;
+		}
+			
+			
+			
+		#carousel-featured .carousel-item {
+			padding: 0px 18px ;
+		}
+	
+	}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
